--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>${artifactId}</finalName>
     </build>
 
 </project>
