--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>rest-todo</description>
     <properties>
         <java.version>17</java.version>
+        <appVersion>v2</appVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -61,7 +62,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>${artifactId}</finalName>
+        <finalName>${artifactId}-${appVersion}</finalName>
     </build>
 
 </project>
