--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=rest-todo
 
+server.port=${APP_PORT:8080}
+
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3361}/${DB_NAME:todos}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:123456}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
